--- a/newpost.html
+++ b/newpost.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<h2>A New Piece for Da Collection by</h2>
 	
-		<form method="post" action="{{ upload_url }}">
+		<form method="post" action="{{ upload_url }}" enctype="multipart/form-data">
 			<label>
 				<div>Artist</div>
 				<input type="text" name="artist" value="{{artist}}">
